# ble-scan-module

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  ble-scan-module.c
main/audio/: audio.c  audio.h
main/configs/: lv_conf.h  m01_config.h
main/pages/: ui_boot_guide.c  ui_control.c  ui_control.h  ui_helpers.c  ui_helpers.h  ui_home.c  ui_official_words_book.c  ui_res.h  ui_settings.c  ui_shutdown.c  ui_study_weekly.c  ui_wifi_manager.c
main/pages/assert/: ic_arrow_down.c  ic_arrow_right.c  ic_arrow_up.c  ic_back.c  ic_bar_battery_0.c  ic_bar_battery_100.c  ic_bar_battery_20.c  ic_bar_battery_40.c  ic_bar_battery_60.c  ic_bar_battery_80.c  ic_charge_battery_0.c  ic_charge_battery_100.c  ic_charge_battery_20.c  ic_charge_battery_40.c  ic_charge_battery_60.c  ic_charge_battery_80.c  ic_delete.c  ic_list_item_book.c  ic_list_item_wifi.c  ic_locked.c  ic_mute.c  ic_refresh.c  ic_reporting.c  ic_right.c  ic_speaker.c  ic_switch_off.c  ic_switch_on.c  ic_tag_selected.c  ic_testing.c  ic_voice_input.c  ic_volume_adjust_lower.c  ic_volume_adjust_plus.c  img_boot_start.c  img_gesture_guide.c  img_home_dictation.c  img_home_official_thesaurus.c  img_home_raw_thesaurus.c  img_home_settings.c  img_home_word_book.c  img_settings_about.c  (+8 more)
main/pages/factory-test/: ui_factory.c
main/sdcard/: sdcard.c  sdcard.h
main/services/audio/: audio.c  audio.h
main/services/battery/: battery.c  battery.h
main/services/button/: button.c  button.h
main/services/lv_port/: lv_disp_port.c  lv_indev_port.c  lv_port.h
main/services/setting/: setting.c  (+1 more)
(+100 files in other folders)
